Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16577

ReactOS exposes the wrong handle count for 'System Idle Process' to the taskmgr

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.15
    • NTCore
    • None

    Description

      Reproduction steps

      • open taskmgr
      • switch into Processes tab
      • add the column "Handle count"

      Expected result
      When you open the MS taskmgr in Windows XP, the handle count of 'System Idle Process' equals 0 - always

      Observed result
      In ReactOS both taskmgrs, our own, and the one from 2k3sp2, both show a Handle count for 'System Idle Process' that is != 0. So the bug is not within our taskmggr binary, but instead deeper in ros.
      In my example screenshot the handle count for 'System Idle Process' is 94.
      Interesting: currently the erroneously displayed handle-count is always the same number as for the "System"-process in ros.
      0.4.13-RC-35-ga596f5c_taskmgr.png our taskmgr left, 2k3sp2 one to the right
      0.4.13-RC-35-ga596f5c.log is rather useless

      Attachments

        Issue Links

          Activity

            People

              KRosUser KRosUser
              reactosfanboy reactosfanboy
              Votes:
              3 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: